WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48343
REGRESSION (
r70320
): DumpRenderTree says 3D_RENDERING is disabled even when it is enabled
https://bugs.webkit.org/show_bug.cgi?id=48343
Summary
REGRESSION (r70320): DumpRenderTree says 3D_RENDERING is disabled even when i...
Adam Roben (:aroben)
Reported
2010-10-26 10:55:44 PDT
REGRESSION (
r70320
): DumpRenderTree says 3D_RENDERING is disabled even when it is enabled
Attachments
Patch
(5.53 KB, patch)
2010-10-26 10:56 PDT
,
Adam Roben (:aroben)
adachan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-10-26 10:56:55 PDT
Created
attachment 71909
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-10-26 11:17:49 PDT
Committed
r70540
: <
http://trac.webkit.org/changeset/70540
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug